<?xml version="1.0" encoding="utf-8"?>
   <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
		<LinearLayout
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal">
        	<TextView
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:textColor="#5d5d5d"
            	android:textSize="16sp"
            	android:gravity="left"
            	android:textStyle="bold"
            	android:text="@string/stat_time">
        	</TextView>
        	<TextView
            	android:id="@+id/stat_date"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:textColor="#43bd00"
            	android:textSize="16sp"
            	android:textStyle="bold"
            	android:paddingTop="6dip"
            	android:paddingBottom="2dip" >
            </TextView>
            <TextView
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:textColor="#43bd00"
            	android:textSize="16sp"
            	android:textStyle="bold"
            	android:paddingTop="6dip"
            	android:paddingBottom="2dip" 
            	android:text="@string/date_separator">
            </TextView>
            <TextView
            	android:id="@+id/stat_time"
            	android:layout_width="fill_parent"
            	android:layout_height="wrap_content"
            	android:textColor="#43bd00"
            	android:textSize="16sp"
            	android:textStyle="bold"
            	android:paddingTop="6dip"
            	android:paddingBottom="2dip" >
            </TextView>
		</LinearLayout>
		<LinearLayout
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal">
			<TextView
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:textColor="#5d5d5d"
            	android:textSize="16sp"
            	android:gravity="left"
            	android:textStyle="bold"
            	android:text="@string/area" >
        	</TextView>
        	<TextView
            	android:id="@+id/area"
            	android:layout_width="fill_parent"
            	android:layout_height="wrap_content"
            	android:textColor="#acacac"
            	android:textSize="16sp"
            	android:textStyle="bold"
            	android:paddingBottom="2dip">
        	</TextView>
        </LinearLayout>
        <LinearLayout
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal">
			<TextView
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:textColor="#5d5d5d"
            	android:textSize="16sp"
            	android:gravity="left"
            	android:textStyle="bold"
            	android:text="@string/system" >
        	</TextView>
        	<TextView
            	android:id="@+id/system"
            	android:layout_width="fill_parent"
            	android:layout_height="wrap_content"
            	android:textColor="#acacac"
            	android:textSize="16sp"
            	android:textStyle="bold"
            	android:paddingBottom="2dip">
        	</TextView>
        </LinearLayout>
        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        	<TextView
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:textColor="#5d5d5d"
            	android:textSize="16sp"
            	android:gravity="left"
            	android:textStyle="bold"
            	android:text="@string/description" >
        	</TextView>
        	<TextView
            	android:id="@+id/description"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:textColor="#acacac"
            	android:textSize="16sp"
            	android:gravity="left">
        	</TextView>
        </LinearLayout>
        <LinearLayout
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal">

        	<TextView
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:textColor="#5d5d5d"
            	android:textSize="16sp"
            	android:gravity="left"
            	android:textStyle="bold"
            	android:text="@string/message" >
        	</TextView>
        	<TextView
            	android:id="@+id/message"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:textColor="#acacac"
            	android:textSize="16sp"
            	android:gravity="left">
        	</TextView>
        </LinearLayout>
</LinearLayout>